# react-native-webrtc-vad

./: CONTRIBUTING.md  README.md  WebrtcVad.podspec  package.json  react-native-webrtc-vad.podspec  react-native.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/webrtcvad/: WebrtcVadModule.kt  WebrtcVadPackage.kt
cpp/: NativeWebrtcVadTurboModule.cpp  NativeWebrtcVadTurboModule.h  react-native-webrtc-vad.cpp  react-native-webrtc-vad.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/webrtcvad/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/WebrtcVadExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/WebrtcVadExample.xcodeproj/: project.pbxproj
example/ios/WebrtcVadExample.xcodeproj/xcshareddata/xcschemes/: WebrtcVadExample.xcscheme
example/src/: App.tsx
ios/: OnLoad.mm  WebrtcVad.h  WebrtcVad.mm
lib/commonjs/: index.js  index.js.map
lib/module/: NativeWebrtcVad.ts  index.js  index.js.map
lib/typescript/commonjs/lib/commonjs/: NativeWebrtcVad.d.ts.map  NativeWebrtcVadTurboModule.d.ts  NativeWebrtcVadTurboModule.d.ts.map
lib/typescript/commonjs/lib/module/: NativeWebrtcVad.d.ts.map  NativeWebrtcVadTurboModule.d.ts.map
lib/typescript/commonjs/src/: NativeWebrtcVadTurboModule.d.ts.map  index.d.ts
lib/typescript/module/lib/module/: NativeWebrtcVad.d.ts
lib/typescript/module/src/: NativeWebrtcVad.d.ts.map  index.d.ts  index.d.ts.map
src/: NativeWebrtcVad.ts  NativeWebrtcVadTurboModule.ts  index.tsx
